--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
     "live-server": "^1.2.0",
+    "moment": "^2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
     "react": "15.6.1",
+    "react-addons-shallow-compare": "^15.6.0",
+    "react-dates": "^12.3.0",
     "react-dom": "15.6.1",
     "react-modal": "2.2.2",
-    "react-router-dom": "^4.1.2",
-    "redux": "^3.7.2",
+    "react-redux": "5.0.5",
+    "react-router-dom": "4.1.2",
+    "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
-    "uuid": "^3.1.0",
+    "uuid": "3.1.0",
     "validator": "8.0.0",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
