--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "cross-env": "^5.0.5",
     "css-loader": "0.28.4",
+    "dotenv": "^4.0.0",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "^4.2.0",
